# media_player_Qt_cpp

./: CMakeLists.txt  README.md
medpl_core/: CMakeLists.txt
medpl_core/include/medpl_pr/: mainwindow.hpp
medpl_core/src/: mainwindow.cpp  mainwindow.ui
medpl_debug/: CMakeLists.txt
medpl_debug/src/: main.cpp
